# note

./: .gitignore  .vimrc  fileNotInUml  gitPush.sh  randomTest.cpp  shortcuts.ahk  tfhe-bootstrapping-uml.html  tfhe-bootstrapping-uml.md  torusPolynomialmultGen.cpp  zshrc
blindRotate/: blindRotate.md
bootstrap_cpp/: bootstrap_cpp.md
cmake/cmake-excutable/: CMakeLists.txt  CMakeLists.txt.bak  Message.cpp  Message.hpp  hello-world.cpp  main.c
mybash/: alias.sh
rustops/: BlockRecomposer.md  encrypt.md  encrypt_with_23i16.md  generic_integer_impl_operation.md  key_and_config.md  lookup_table.md  ops_add.md  ops_mul.md  summary_of_ops_add.md  the_decrypt.md
superaic-tfhe/: paramConfig.md
tfhe-test/: classic_PBS_parameters.cpp  testPolynomialGen.cc  unorder_map_onheap.cc
torusPolynomialMult/: torusPolynomialGen.cpp  torusPolynomialmultGen.cpp  torusPolynomialmult_p_q_v.txt
umlStructureGraph/: bootstrappingkey.md  tfhe-bootstrapping-uml.html  tfhe-uml-v2.html  tfhe-uml-v2.md
zpf-test/: 1  FILE_IO.cc  auto.cc  blockdecomposer.cc  bool_ops.cc  confliction-declaration.cc  file.txt  koch.py  lambda.cc  lwesamplearray.cc  lwesamplearray_move.cc  macros_test.cc  permute.cc  shared_ptr.cc  smart_pointer.cc  spiro.py  stack.cc  string_as_number.cc  struct.cc  switch_case.cc  temporary_variable.cc  testPolynomialGen.cc  testPolynomialGenWithPBSTable.cc  unorder_map.cc  use_this.cc  valgrind.txt  zip.cc  (+1 more)
zpf-test/superaic-tfhe-gerrit/src/: CMakeLists.txt  DartConfiguration.tcl
zpf-test/superaic-tfhe-gerrit/src/driver/: CMakeLists.txt  tfhe_superaic_driver.h
zpf-test/superaic-tfhe-gerrit/src/examples/: CMakeLists.txt  comparebits.cpp  server_with_driver.cpp  server_without_driver.cpp
zpf-test/superaic-tfhe-gerrit/src/examples/demo_chatroom/: CMakeLists.txt  README.md
zpf-test/superaic-tfhe-gerrit/src/examples/demo_chatroom/ChatroomClient/: CMakeLists.txt
zpf-test/superaic-tfhe-gerrit/src/examples/demo_chatroom/ChatroomClient/include/: ChatroomClient.h  clienteventthread.h
zpf-test/superaic-tfhe-gerrit/src/examples/demo_chatroom/ChatroomClient/resources/: img.qrc
zpf-test/superaic-tfhe-gerrit/src/examples/demo_chatroom/ChatroomClient/src/: ChatroomClient.cpp  ChatroomClient.ui  clienteventthread.cpp  main.cpp
zpf-test/superaic-tfhe-gerrit/src/examples/demo_chatroom/ChatroomServer/: CMakeLists.txt  README.md
zpf-test/superaic-tfhe-gerrit/src/examples/demo_chatroom/ChatroomServer/include/: ChatroomServer.h
zpf-test/superaic-tfhe-gerrit/src/examples/demo_chatroom/ChatroomServer/src/: ChatroomServer.cpp  main.cpp
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-acc/: CMakeLists.txt  tfhe_acc.cpp
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-acc/accs/: executor.cpp  libacc.h
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-acc/accs/CPU-ser/: acc_cpu_ser.cpp
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-acc/accs/FPGA-V0/: acc_fpga_v0.cpp
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-acc/accs/QEMU-V0/: acc_qemu_v0.cpp
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-acc/include/: tfhe_acc.h
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-client/: CMakeLists.txt
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-client/include/: tfhe_superaic_client.h
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-core/: CMakeLists.txt  autogenerated.cpp  boot-gates.cpp  lwe-bootstrapping-functions-fft.cpp  lwe-bootstrapping-functions.cpp  lwe-functions.cpp  lwe-keyswitch-functions.cpp  lwe.cpp  lwebootstrappingkey.cpp  lwekey.cpp  lweparams.cpp  lwesamples.cpp  message_functions.cpp  multiplication.cpp  numeric-functions.cpp  polynomials.cpp  tfhe_garbage_collector.cpp  tfhe_gate_bootstrapping.cpp  tfhe_io.cpp  tfhe_package.cpp  tfhe_session.cpp  tfhe_superaic_torus.c  tgsw-fft-operations.cpp  tgsw-functions.cpp  tgsw.cpp  tlwe-fft-operations.cpp  tlwe-functions.cpp  tlwe.cpp  toruspolynomial-functions.cpp
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-core/fft_processors/: CMakeLists.txt
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-core/fft_processors/nayuki/: CMakeLists.txt  lagrangehalfc_impl.h
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-core/include/: classic_PBS_parameters.h  lwe-functions.h  lwebootstrappingkey.h  lwekey.h  lwekeyswitch.h  lweparams.h  lwesamples.h  message_functions.h  polynomials.h  polynomials_arithmetic.h  tfhe.h  tfhe_garbage_collector.h  tfhe_gate_bootstrapping_structures.h  tfhe_io.h  tfhe_package.h  tfhe_session.h  tfhe_superaic_torus.h  tgsw.h  tgsw_functions.h  tlwe.h  tlwe_functions.h
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-server/: CMakeLists.txt  tfhe_superaic_server.cpp
zpf-test/superaic-tfhe-gerrit/src/libtfhe-superaic-server/include/: tfhe_superaic_server.h
zpf-test/superaic-tfhe-gerrit/src/muduo/: CMakeLists.txt
zpf-test/superaic-tfhe-gerrit/src/muduo/muduo/net/: CMakeLists.txt
zpf-test/superaic-tfhe-gerrit/src/tests/: ACC_test.cpp  CMakeLists.txt  FPGA_ACC_test.cpp  QEMU_test.cpp  arithmetic_test.cpp  bootstrapping_classic_PBS_parameters_test.cpp  bootstrapping_direct_test.cpp  bootstrapping_test.cpp  classic_PBS_parameters.cpp  decrypt_with_plaintext_modulus.cpp  io_test.cpp  lagrangehalfc_test.cpp  lwe_test.cpp  lwekeyswitch_test.cpp  macros_decrypt_with_plaintext_modulus_macros.cpp  macros_decrypt_with_plaintext_modulus_macros_only_bootstrap.cpp  macros_modSwitch_with_plaintext_modulus_macros.cpp  macros_ops_pbs_equality.cpp  message_encode.cpp  moduo_test.cpp  ops_add.cpp  ops_add_with_carry.cpp  ops_pbs_equality.cpp  ops_string_encrypt_test.cpp  ops_string_match_test.cpp  package_test.cpp  polynomial_test.cpp  session_test.cpp  small_size_test.cpp  test-decomp-tgsw.cpp  test-lwe.cpp  test_internal.h  tgsw_direct_test.cpp  tgsw_test.cpp  tlwe_test.cpp  unit_test_torus.cpp  zpf_for_bootstrap_detail.cpp
zpf-test/superaic-tfhe-gerrit/src/tests/fakes/: lwe-bootstrapping.h  tgsw.h  tlwe.h
zpf-test/superaic-tfhe-gerrit/src/tests/googletest/googletest/src/: gtest-death-test.cc
zpf-test/use_fix/: CMakeLists.txt  Makefile  a.cc  a.h  b.cc  b.h  main.cpp
(+37 files in other folders)
